--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [tool.poetry]
-name = "BallAnalytics"
+name = "ball_analytics"
 version = "0.1.0"
 description = "A project for football analytics using machine learning algorithms."
 authors = ["Marc Zemelka <marc.zemelka@web.de>"]
 license = "MIT"
+packages = []
 
 [tool.poetry.dependencies]
 python = "^3.8"
